--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="input_box" id="input_box">
         <div class="input_head">输出</div>
-        <button class="input_button" onclick="input_box()">^</button>
+        <span class="input_button" onclick="input_box()">^</span>
         <p id = "input_text"></p>
     </div>
 
