--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 
     <!-- 引入 Lua 提示插件，暂无-->
     <!-- <script src="lua-hint.js"></script> -->
-    <link  rel="stylesheet" type="text/css" href="app/app.css">
+    <link rel="stylesheet" type="text/css" href="app/app.css">
+    <style>
+        * {
+            font-family: 'Cascadia Code', 'Microsoft YaHei', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -59,7 +64,7 @@
     <div class="input_box" id="input_box">
         <div class="input_head">输出</div>
         <span class="input_button" onclick="input_box()">^</span>
-        <p id = "input_text"></p>
+        <p id="input_text"></p>
     </div>
 
     <script src="app/app.js"></script>
