--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <div class="editor-container">
         <textarea id="code-editor" style="height: 100%;"></textarea>
     </div>
-    <div class="input_box" id="input_box">
+    <div class="input_box" id="input_box" >
+        <textarea readonly id="input"  class="input"></textarea>
         <div class="input_head">输出</div>
         <span class="input_button" onclick="input_box()">^</span>
-        <p id="input_text"></p>
     </div>
 
     <script src="app/app.js"></script>
